--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/imersao.css" >
+    <link rel="stylesheet" href="/dev/imersao.css" >
     <title>Imersão Dev</title>
 </head>
 <body>
@@ -19,12 +19,24 @@
         </div>
 
         <div class="app">
+
             <label name="film">Insira um link de imagem</label>
-            <input type="text" placeholder="Digite seu próximo filme">
-            <button>Adicionar Filme</button>
+            <input id="type-film" type="text" placeholder="Digite seu próximo filme">
+            <button onclick="checkLinkImage()">Adicionar Filme</button>
+        
+        </div>
+
+        <div class="itens-list">
+
+            <div class="list-banners">
+
+
+            </div>
         </div>
 
     </section>
+
+    <script src="/aluraFlix.js"></script>
     
 </body>
 </html>
